# swagger.json
@@ -5,7 +5,7 @@
     "description": "Temple API",
     "version": "1.0.0"
   },
-  "host": "cse341-crud-n3vw.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http",
@@ -35,7 +35,7 @@
     "/pets/": {
       "get": {
         "tags": [
-          "Pets"
+          "Pets - Get All"
         ],
         "description": "",
         "produces": [
@@ -49,7 +49,7 @@
       },
       "post": {
         "tags": [
-          "Pets"
+          "Pets - Create Pet"
         ],
         "description": "",
         "parameters": [
@@ -59,10 +59,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "pet_id": {
+                "name": {
                   "example": "any"
                 },
-                "name": {
+                "pet_id": {
                   "example": "any"
                 },
                 "gender": {
@@ -85,11 +85,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
           },
-          "412": {
-            "description": "Precondition Failed"
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -100,7 +100,7 @@
     "/pets/{id}": {
       "get": {
         "tags": [
-          "Pets"
+          "Pets - Get Single"
         ],
         "description": "",
         "produces": [
@@ -120,12 +120,15 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
         "tags": [
-          "Pets"
+          "Pets - Update Pet"
         ],
         "description": "",
         "parameters": [
@@ -141,10 +144,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "pet_id": {
+                "name": {
                   "example": "any"
                 },
-                "name": {
+                "pet_id": {
                   "example": "any"
                 },
                 "gender": {
@@ -167,14 +170,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
           },
           "400": {
             "description": "Bad Request"
-          },
-          "412": {
-            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -183,7 +183,7 @@
       },
       "delete": {
         "tags": [
-          "Pets"
+          "Pets - Delete Pet"
         ],
         "description": "",
         "parameters": [
@@ -195,8 +195,180 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/owners/": {
+      "get": {
+        "tags": [
+          "Owners - Get All"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Owners - Create Owner"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "owner_id": {
+                  "example": "any"
+                },
+                "ownerName": {
+                  "example": "any"
+                },
+                "gender": {
+                  "example": "any"
+                },
+                "age": {
+                  "example": "any"
+                },
+                "petOwned": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/owners/{id}": {
+      "get": {
+        "tags": [
+          "Owners - Get Single"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Owners - Update Owner"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "owner_id": {
+                  "example": "any"
+                },
+                "ownerName": {
+                  "example": "any"
+                },
+                "gender": {
+                  "example": "any"
+                },
+                "age": {
+                  "example": "any"
+                },
+                "petOwned": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Owners - Delete Owner"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
